# reactionary-chatrs

./: .gitignore  package.json
.github/workflows/: release.yml
api/: Cargo.toml  Dockerfile  docker-compose.yml  sqlx-data.json
api/migrations/: 20210430010224_initialize_db.sql
api/src/: broker.rs  channel.rs  db.rs  endpoints.rs  helpers.rs  main.rs  message.rs  socket.rs
app/: package.json
app/src/components/: Chakra.tsx
app/src/components/atoms/: Link.tsx
app/src/components/chat/: channels.tsx  chatBox.tsx  messageFeed.tsx
app/src/hooks/: store.ts  useChatSocket.ts  useChatStore.ts  useWebsocket.ts
app/src/lib/: theme.ts
app/src/pages/: _app.tsx  _document.tsx  index.tsx
